# mv-scirf-doc-zh

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .readthedocs1.yml  DEPLOYMENT_GUIDE.md  Makefile  README.md  pyproject.toml
doc-cn/source/: glossary.rst  license.rst
doc-cn/source/api/: constants.rst  index.rst  instances.rst  network.rst  networkSet.rst  plotting.rst  qfactor.rst  util.rst
doc-cn/source/citations_ack/: citations.rst  index.rst
doc-cn/source/contributing/: index.rst
doc-cn/source/examples/: README.md
doc-cn/source/tutorials/: Deembedding.ipynb  Introduction.ipynb  Media.ipynb  Networks.ipynb  VectorFitting.ipynb
doc-zh/: requirements.txt
doc-zh/source/: conf.py  glossary.rst  index.rst
doc-zh/source/api/: index.rst  mathFunctions.rst  time.rst  tlineFunctions.rst  vectorFitting.rst
doc-zh/source/citations_ack/: acknowledging.rst  citations.rst  index.rst
doc-zh/source/contributing/: index.rst
doc-zh/source/examples/: LICENSE.txt  README.md  index.rst
doc-zh/source/tutorials/: Calibration.ipynb  Circuit.ipynb  Connecting_Networks.ipynb  Media.ipynb  (+10 more)
doc/source/: conf.py  glossary.rst  index.rst  license.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst
source/: glossary.rst  license.rst
source/api/: circuit.rst  constants.rst  instances.rst  mathFunctions.rst  networkSet.rst  qfactor.rst  time.rst  tlineFunctions.rst  util.rst
source/contributing/: index.rst
source/examples/: index.rst
source/tutorials/: Calibration.ipynb  Connecting_Networks.ipynb  Introduction.ipynb  Networks.ipynb  Plotting.ipynb
(+144 files in other folders)
