[project]
name = "mv-scirf-doc-zh"
version = "0.1.0"
description = "scikit-rf Chinese Documentation"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=7.0,<8.0",
    "sphinx-rtd-theme>=2.0.0",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "matplotlib>=3.5.0",
    # 关键修改：从 PyPI 安装 scikit-rf，不要从本地安装
    "scikit-rf>=1.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

# 完全移除 [build-system] 部分，或者使用最简配置
# 这样 uv 就不会尝试构建当前仓库作为包了